# mtcnn-inference

./: .gitignore  CMakeLists.txt  FaceDetector.h  FacePreprocess.h  FaceRecognition.h  Makefile  ModelLoader.cpp  ModelLoader.h  pythonExt.cpp  sample.cpp
python/: MTCNN Infer Research.ipynb  mtcnn.py
python/.ipynb_checkpoints/: MTCNN Infer Research-checkpoint.ipynb
